<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/iconmain"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_hangqing"
        android:icon="@drawable/iconmarket"
        android:title="@string/title_hangqing" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/iconnews"
        android:title="@string/title_news" />
    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/iconedu"
        android:title="@string/title_education" />
    <item
        android:id="@+id/navigation_trade"
        android:icon="@drawable/iconbill"
        android:title="@string/title_trade" />

</menu>