<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hangqing"
        android:name="com.example.myapplication.ui.hangqing.HangqingFragment"
        android:label="@string/title_hangqing"
        tools:layout="@layout/fragment_hangqing" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.myapplication.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_education"
        android:name="com.example.myapplication.ui.education.EducationFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_education" />
    <fragment
        android:id="@+id/navigation_trade"
        android:name="com.example.myapplication.ui.trade.TradeFragment"
        android:label="@string/title_trade"
        tools:layout="@layout/fragment_trade" />
</navigation>