<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/market_back"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/new_actionbar"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tabbill"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/iv_setting"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/iconset"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/memberLabel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/meber_icon"
                android:gravity="center" />

            <TextView
                android:id="@+id/member"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:focusable="false"
                android:gravity="center_vertical|left"
                android:paddingRight="10dp"
                android:text="@string/choosemerber"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/line_gray" />

            <TextView
                android:id="@+id/merber_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/merber_setting"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/memberAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center" />

            <EditText
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/input_account"
                android:inputType="number"
                android:textColor="@color/backColor"
                android:textColorHint="@color/panelGray"
                android:textCursorDrawable="@null"
                android:textScaleX="1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clearuser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/memberPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/mima"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/backColor"
                android:textColorHint="@color/panelGray"
                android:textCursorDrawable="@null"
                android:textScaleX="1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clearmima"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />

        <LinearLayout
            android:id="@+id/login_cb"
            android:layout_width="match_parent"
            android:minHeight="45dp"
            android:padding="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/save_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/bank_radio"
                android:button="@null"
                android:gravity="center_vertical"
                android:text="保存帐号"
                android:checked="true"
                android:textColor="@color/backColor"
                android:textSize="15sp" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:focusable="false"
                android:clickable="false"
                android:visibility="invisible"
                android:drawableLeft="@drawable/bank_radio"
                android:gravity="center_vertical"
                android:text="显示结算单"
                android:textColor="@color/backColor"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/read_protocol"
            android:layout_width="match_parent"
            android:minHeight="45dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/bank_checked"
                android:drawablePadding="15dp"
                android:button="@null"
                android:gravity="center_vertical"
                android:checked="false"
                android:textColor="@color/backColor"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tv_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protocal"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:minHeight="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btnloginstyle"
            android:text="@string/loginBtn"
            android:textColor="@drawable/text_color_selector"/>


        <LinearLayout
            android:id="@+id/forgot_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:autoLink="none"
                android:gravity="left|center"
                android:text="@string/forgot_user"
                android:textSize="16sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:textColor="@color/backColor"
                android:gravity="left|center"
                android:text="@string/changsheng_open"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/backColor"
                android:gravity="right|center"
                android:text="@string/forgot_pswd"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/forthLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/layout_style"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="none"
                android:gravity="center"
                android:text="@string/changsheng_open"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/backColor"
        android:textSize="15sp"
        android:text="登录遇到问题"
        android:drawableLeft="@mipmap/login_question"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        />
</RelativeLayout>